<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="com.example.jwbauer3.mapsourcing.MainMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView_MainMenu_Title"
        android:text="@string/app_name"
        android:textSize="44sp"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/LinearLayout_MainMenu_BuildingSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/TextView_MainMenu_Title"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/TextView_MainMenu_BuildingSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/building"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <Spinner
            android:id="@+id/Spinner_MainMenu_BuildingSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dialog" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_MainMenu_BuildingButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/LinearLayout_MainMenu_BuildingSearch"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/Button_MainMenu_NavigateBuilding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            android:textSize="24sp"
            android:layout_weight="1"
            android:onClick="navigatePressed"/>

        <Button
            android:id="@+id/Button_MainMenu_MapBuilding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:textSize="24sp"
            android:layout_weight="1"
            android:onClick="mapPressed"/>

    </LinearLayout>

    <Button
        android:id="@+id/Button_MainMenu_AddBuilding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout_MainMenu_BuildingButtons"
        android:text="@string/add_new_building"
        android:textSize="24sp"
        android:onClick="addBuilding"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presentation_mode"
        android:textSize="24sp"
        android:onClick="presentationModeToggle"
        android:layout_below="@+id/Button_MainMenu_AddBuilding"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
